<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F724034A"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/app_logo_headline"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabsLO"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon.CenterStacked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="560dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tabBackground="@color/purple_700"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/white"
        tools:layout_editor_absoluteX="-4dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/scndTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="407dp"
        android:layout_height="557dp"
        android:background="#D5320763"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabsLO"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>